--- a/elaichi/android/build.gradle
+++ b/elaichi/android/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.5.10'
+    ext.kotlin_version = '1.5.20'
     repositories {
         google()
         mavenCentral()
@@ -10,16 +10,16 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         //Dagger Hilt
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.35"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.37'
 
         //Safe Args
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+//        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
 
         //Google Services
         classpath 'com.google.gms:google-services:4.3.8'
 
         //Firebase Crashlytics
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.6.1'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.0'
     }
 }
 
